--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,40 @@
-# Python
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Node.js / Frontend
+node_modules/
+dist/
+dist-ssr/
+*.local
+
+# Python / Backend
 __pycache__/
-*.pyc
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+*.egg-info/
+.env
 backend/.env
 
-# Node
-node_modules/
-frontend/.env
-dist/
-build/
+# OS
+.DS_Store
+
+# IDEs & Editors
+.vscode/
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Misc
+*.swp
+*.tmp
